--- a/contrib/helm-charts/portus/templates/portus-configmap.yaml
+++ b/contrib/helm-charts/portus/templates/portus-configmap.yaml
@@ -104,46 +104,46 @@ data:
       # If enabled, users can authenticate with their Google Account.
       # Callback url: <host>/users/auth/google_oauth2/callback
       google_oauth2:
-        enabled: false
+        enabled: {{ .Values.portus.config.oauth.google_oauth2.enabled }}
         # Credentials. Details on https://developers.google.com/identity/protocols/OpenIDConnect
-        id: ""
-        secret: ""
+        id: {{ .Values.portus.config.oauth.google_oauth2.id | quote }}
+        secret: {{ .Values.portus.config.oauth.google_oauth2.secret | quote }}
         # If a domain (e.g. mycompany.com) is set, then only signups with email from this domain are allowed.
-        domain: ""
+        domain: {{ .Values.portus.config.oauth.google_oauth2.domain | quote }}
         options:
           # G Suite domain. If set, then only members of the domain can sign in/up.
           # If it's empty then any google users con sign in/up.
-          hd: ""
+          hd: {{ .Values.portus.config.oauth.google_oauth2.options.hd | quote }}
 
       # OpenID authentication support. If enabled, then users can authenticate with OpenID/Connect
       # Callback url: <host>/users/auth/open_id/callback
       open_id:
-        enabled: false
+        enabled: {{ .Values.portus.config.oauth.open_id.enabled }}
         # Optional. If identifier set then user redirect to the OpenID provider.
         # If not, then user is asked for identifier before redirect.
         # Example https://openid.stackexchange.com
-        identifier: ""
+        identifier: {{ .Values.portus.config.oauth.open_id.identifier | quote }}
         # If a domain (e.g. mycompany.com) is set, then only signups with email from this domain are allowed.
-        domain: ""
+        domain: {{ .Values.portus.config.oauth.open_id.domain | quote }}
 
       # Github authentication support.
       # Callback url: <host>/users/auth/github/callback
       github:
-        enabled: false
+        enabled: {{ .Values.portus.config.oauth.github.enabled }}
         # Application credentials.
-        client_id: ""
-        client_secret: ""
+        client_id: {{ .Values.portus.config.oauth.github.client_id | quote }}
+        client_secret: {{ .Values.portus.config.oauth.github.client_secret | quote }}
         # Only members of organization's team can sign in/up with Github.
-        organization: ""
-        team: ""
+        organization: {{ .Values.portus.config.oauth.github.organization | quote }}
+        team: {{ .Values.portus.config.oauth.github.team | quote }}
         # If a domain (e.g. mycompany.com) is set, then only signups with email from this domain are allowed.
-        domain: ""
+        domain: {{ .Values.portus.config.oauth.github.domain | quote }}
 
       # Gitlab authentication support.
       # Callback url: <host>/users/auth/gitlab/callback
       gitlab:
         enabled: {{ .Values.portus.config.oauth.gitlab.enabled }}
-        application_id: {{ .Values.portus.config.oauth.gitlab.applicationId | quote }}
+        application_id: {{ .Values.portus.config.oauth.gitlab.application_id | quote }}
         secret: {{ .Values.portus.config.oauth.gitlab.secret | quote }}
         # Only member of the group can sign in/up with Gitlab.
         group: {{ .Values.portus.config.oauth.gitlab.group | quote }}
@@ -155,15 +155,15 @@ data:
       # Bitbucket authentication support. Need permission to read email.
       # Callback url: <host>/users/auth/bitbucket/callback
       bitbucket:
-        enabled: false
+        enabled: {{ .Values.portus.config.oauth.enabled }}
         # Application credentials.
-        key: ""
-        secret: ""
+        key: {{ .Values.portus.config.oauth.key | quote }}
+        secret: {{ .Values.portus.config.oauth.secret | quote }}
         # If a domain (e.g. mycompany.com) is set, then only signups with email from this domain are allowed.
-        domain: ""
+        domain: {{ .Values.portus.config.oauth.domain | quote }}
         options:
           # Only members of team can sign in/up with Bitbucket. Need permission to read team membership.
-          team: ""
+          team: {{ .Values.portus.config.oauth.options.team | quote }}
 
     # Set first_user_admin to true if you want that the first user that signs up
     # to be an admin.
